--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -141,7 +141,7 @@
         </div>
       </a>
       <div class="navbar-center">
-        <a href="http://localhost:8080/listing">Homes</a>
+        <a href="/listing">Homes</a>
         <a href="/experiences">Experiences</a>
         <a href="/services">Services</a>
       </div>
